Some tiles remain noisy with denoising in CPU+GPU render from master #53134

Closed
opened 2017-10-23 13:37:27 +02:00 by YAFU · 9 comments

System Information
Kubuntu 14.04 - GTX 960 - i7-3770

Blender Version
Broken: From master , 57a0cb797d

Short description of error
Some tiles remain noisy with new CPU+GPU render from master

cpu_gpu_denoising_differences_2.blend
Exact steps for others to reproduce the error
Download blender from master, from user prefferences configure it to render using GPU + CPU at the same time. You make sure to be using small tiles (in case you have auto tile size addon) and render the scene.
cpu_gpu_denoising_differences_2.blend

**System Information** Kubuntu 14.04 - GTX 960 - i7-3770 **Blender Version** Broken: From master , 57a0cb797d **Short description of error** Some tiles remain noisy with new CPU+GPU render from master [cpu_gpu_denoising_differences_2.blend](https://archive.blender.org/developer/F1060661/cpu_gpu_denoising_differences_2.blend) **Exact steps for others to reproduce the error** Download blender from master, from user prefferences configure it to render using GPU + CPU at the same time. You make sure to be using small tiles (in case you have auto tile size addon) and render the scene. [cpu_gpu_denoising_differences_2.blend](https://archive.blender.org/developer/F1060661/cpu_gpu_denoising_differences_2.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @YAFU

Added subscriber: @YAFU
YAFU changed title from Some tiles remain noisy in CPU+GPU render from master to Some tiles remain noisy with denoising in CPU+GPU render from master 2017-10-23 13:41:31 +02:00

Added subscriber: @SteffenD

Added subscriber: @SteffenD

Confirmed here. Win10 x64, GTX1080Ti

Confirmed here. Win10 x64, GTX1080Ti

This issue was referenced by blender/cycles@47bdceec96

This issue was referenced by blender/cycles@47bdceec96cee43d05b187cdee4275e4958196ee

This issue was referenced by a1aad1f8d1

This issue was referenced by a1aad1f8d15ecdad4a22c34a3708ba6f8c815079

Added subscriber: @brecht

Added subscriber: @brecht

Fixed now, thanks for the report.

Fixed now, thanks for the report.

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#53134
No description provided.