Fix T53134: denoising with CPU + GPU render leaves some tiles noisy.